<resources>
    <string name="app_name">Brain Trainer</string>
    <string name="go">Go!</string>
    <string name="_30s">30s</string>
    <string name="_0_0">0/0</string>
    <string name="_31_7">31+7</string>
    <string name="_14">14</string>
    <string name="_15">15</string>
    <string name="_16">16</string>
    <string name="_17">17</string>
    <string name="correct">Correct!</string>
</resources>