<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/goButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_green_light"
        android:onClick="start"
        android:padding="40dp"
        android:text="@string/go"
        android:textSize="50sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="118dp"
            android:layout_marginTop="34dp"
            android:layout_marginEnd="117dp"
            android:layout_marginBottom="20dp"
            android:text="@string/correct"
            android:textSize="50sp"
            app:layout_constraintBottom_toTopOf="@+id/playAgainButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

        <TextView
            android:id="@+id/timerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="44dp"
            android:layout_marginBottom="15dp"
            android:background="@android:color/holo_orange_dark"
            android:padding="10dp"
            android:text="@string/_30s"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/gridLayout"
            app:layout_constraintEnd_toStartOf="@+id/sumTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sumTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="8dp"
            android:padding="15dp"
            android:text="@string/_31_7"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/gridLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/playAgainButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="143dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="143dp"
            android:layout_marginBottom="183dp"
            android:onClick="playAgain"
            android:text="Play Again"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resultTextView" />

        <TextView
            android:id="@+id/scoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="13dp"
            android:background="@color/purple_200"
            android:padding="10dp"
            android:text="0/0"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/gridLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/sumTextView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="394dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="34dp"
            app:layout_constraintBottom_toTopOf="@+id/resultTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sumTextView">

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/design_default_color_error"
                android:gravity="fill"
                android:onClick="chooseAnswer"
                android:tag="0"
                android:text="@string/_14"
                android:textSize="80sp"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_row="0"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_orange_light"
                android:gravity="fill"
                android:onClick="chooseAnswer"
                android:tag="1"
                android:text="@string/_15"
                android:textSize="80sp"
                app:layout_column="1"
                app:layout_columnWeight="1"
                app:layout_row="0"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/design_default_color_primary"
                android:gravity="fill"
                android:onClick="chooseAnswer"
                android:tag="2"
                android:text="@string/_16"
                android:textSize="80sp"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_row="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_green_dark"
                android:gravity="fill"
                android:onClick="chooseAnswer"
                android:tag="3"
                android:text="@string/_17"
                android:textSize="80sp"
                app:layout_column="1"
                app:layout_columnWeight="1"
                app:layout_row="1"
                app:layout_rowWeight="1" />
        </androidx.gridlayout.widget.GridLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>